# Analise-de-Cointegra-o

./: .replit  Procfile  Untitled15.ipynb  coint.py  confg  funcoes.py  ibov.py  main.py  pyproject.toml  requirements.txt
