[tool.poetry]
name = "repl_python3_Analise-de-Cointegracao"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
statsmodels = "^0.13.0"
streamlit = "^1.1.0"
yfinance = "^0.1.64"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
